--- a/actix-broker/Cargo.toml
+++ b/actix-broker/Cargo.toml
@@ -11,7 +11,7 @@ exclude = [".gitignore"]
 edition = "2018"
 
 [dependencies]
-actix = { version = "0.10", default-features = false }
+actix = { path="../", default-features = false }
 fnv = "1.0.6"
 log = "0.4.5"
 
